# HobbyGameEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
Engine/include/GEngine/: Action.h  GameEngine.h
Engine/include/GEngine/EcsCore/: ComponentManager.h  EcsManager.h  EntityManager.h  Prerequisite.h  System.h
Engine/include/GEngine/GWindow/: BaseWindow.h  EngineWindow.h
Engine/include/GGraphics/: Camera.h  Color.h  GColor.h  GGraphic.h  GShapes.h  Mesh.h  ModellingTransformation.h  Primitives2d.h  Primitives3d.h  Transformations.h  ViewingTransformation.h  Volumes.h
Engine/include/GGraphics/GWindow/: Window.h
Engine/include/GMath/: GMath.h  MPoint.h  MVector.h  Matrix3x3.h  Matrix4x4.h  Point.h  Point3.h  Point4.h  Vector.h  Vector3.h
Engine/include/Utilities/: Action.h  EngineEventManager.h  VirtualKeys.h
Engine/src/GEngine/: GameEngine.cpp  GameWorld.cpp
Engine/src/GEngine/EcsCore/: ComponentManager.cpp  EcsManager.cpp  EntityManager.cpp  System.cpp
Engine/src/GEngine/GWindow/: EngineWindow.cpp
Engine/src/GGraphics/: GGraphic.cpp  GShapes.cpp  Mesh.cpp
Engine/src/GGraphics/GWindow/: Window.cpp
GameApplication/: EventManager.h  main.cpp
GameApplication/ECS/Components/: Camera.h  GameObject.h  InputCon.h  MeshComponent.h  MeshRenderer.h  Renderer.h  Transform.h
GameApplication/ECS/Systems/: InputSystem.h  MoveSystem.h  RenderSystem.h
include/GEngine/: Action.h  GameEngine.h  GameObject.h  GameWorld.h
include/GEngine/ECS/: ComponentManager.h  ComponentManager.hpp  Coordinator.hpp  EcsManager.cpp  EcsManager.h  EntityManager.h  Prerequisite.h  System.h  SystemManager.h  Types.hpp
include/GEngine/EcsCore/: ComponentManager.h  EcsManager.h  EntityManager.h  Prerequisite.h  System.h  SystemManager.h
include/GGraphics/: Draw.h  Shape.h
include/GGraphics/GWindow/: Window.h
include/GMath/: MVector.h
src/GEngine/: GameEngine.cpp  GameObject.cpp  GameWorld.cpp
src/GEngine/ECS/: ComponentManager.cpp  EntityManager.cpp  System.cpp  SystemManager.cpp
src/GEngine/EcsCore/: EntityManager.cpp  System.cpp  SystemManager.cpp
src/GGraphics/: Draw.cpp
src/GGraphics/GWindow/: Window.cpp
src/GameApplication/: EventManager.h  main.cpp
src/GameApplication/ECS/Components/: GameObject.h  InputCon.h  Renderer.h  Transform.h
src/GameApplication/ECS/Systems/: InputSystem.h  MoveSystem.h  RenderSystem.h
